--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ python = "^3.10"
 pydantic = "^2.10.6"
 typer = "^0.9.0"
 rich = "^13.7.1"
+loguru = "^0.7.2"
 google-auth = "^2.38.0"
 google-api-python-client = "^2.165.0"
 pyopenssl = "^25.0.0"
